--- a/Foodie/style.css
+++ b/Foodie/style.css
@@ -4,20 +4,18 @@
 }
 
 html { scroll-padding-top: 70px; }
-
 .heading{
-color: white;
-position: absolute;
-top: 35%;
-left: 40%;
-width: 400px;
+    color: white;
+    position: absolute;
+    top: 40%;
+    left: 40%;
+    width: 400px;
 }
 .he{
-color: white;
-position: absolute;
-top: 30%;
-left: 20%;
-width: 300px; 
+    color: white;
+    position: absolute;
+    top: 40%;
+    left: 25%;
 }
 .a{
     text-align: center;
@@ -25,13 +23,24 @@ width: 300px;
 .im{
     width: 190px;
     height: 200px;
+    object-fit: cover;     
+    display: block;
+    margin: 0 auto; 
 }
+.card { height: 250px; }
+
 .link{
-    margin-left: 190px;
+    display: block;
+    text-align: center;
     font-size: large;
+    margin-top: 8px;     
 }
 .ig{
+    width: 100%;
+    height: 220px;
+    object-fit: cover;
     border-radius: 10%;
+    display: block;
 }
 
 .g{
@@ -41,6 +50,6 @@ width: 300px;
 .x{
     width: 120px;
 }
-img{
+.carousel-inner img {
     width: 100%;
 }
